--- a/index.html
+++ b/index.html
@@ -13,16 +13,26 @@
 </head>
 <body>
   <nav>
-    <header><img src="images\logo-bookmark.svg" alt="Bookmark-logo"></header>
+    <header><img src="C:\Users\DELL\bookmark-landing-page-master\images\logo-bookmark.svg" alt="Bookmark-logo"></header>
     <div class="nav-items">
       <a href="#">Features</a>
       <a href="#">Pricing</a>
       <a href="#">Contact</a>
       <a href="#">Login</a>
     </div>
+    <div class="nav-links display1">
+      <a href="#">Features</a>
+      <a href="#">Pricing</a>
+      <a href="#">Contact</a>
+      <a href="#">Login</a>
+      <div class="dav">
+        <a href="#"><img src="file:///C:/Users/DELL/bookmark-landing-page-master/images/icon-facebook.svg" alt="facebook icon"></a>
+        <a href="#"> <img src="file:///C:/Users/DELL/bookmark-landing-page-master/images/icon-twitter.svg" alt="twitter icon"></a>
+      </div>
+    </div>
     <div class="nav-toggle display">
-      <img class="image1" src="images/icon-hamburger.svg" alt="harmburger-icon">
-      <img class="image2 display1" src="images/icon-close.svg" alt="close-icon">
+      <img class="image1" src="file:///C:/Users/DELL/bookmark-landing-page-master/images/icon-hamburger.svg" alt="harmburger-icon">
+      <img class="image2 display1" src="file:///C:/Users/DELL/bookmark-landing-page-master/images/icon-close.svg" alt="close-icon">
     </div>
   </nav>
   <section class="section1">
@@ -38,7 +48,7 @@
         </span>
     </div>
     <div class="secondSecItem">
-      <img src="images/illustration-hero.svg" alt="Illustration-features">
+      <img src="file:///C:/Users/DELL/bookmark-landing-page-master/images/illustration-hero.svg" alt="Illustration-features">
       <div class="space"></div>
     </div>
   </section>
@@ -54,7 +64,7 @@
   </section>
   <section class="section3">
     <div class="firstDiv">
-      <img src="images/illustration-features-tab-1.svg" alt="Illustration-features">
+      <img src="file:///C:/Users/DELL/bookmark-landing-page-master/images/illustration-features-tab-1.svg" alt="Illustration-features">
       <div class="space"></div>
     </div>
     <div class="secondDiv">
@@ -72,19 +82,19 @@
     </div>
       <div class="div4">
         <span class="span4">
-          <img src="images/logo-chrome.svg" alt="Chrome logo">
+          <img src="file:///C:/Users/DELL/bookmark-landing-page-master/images/logo-chrome.svg" alt="Chrome logo">
           <h3>Add to Chrome</h3>
           <p>Minimum version 62</p>
           <button>Add & Install Extension</button>
         </span>
         <span class="span5">
-          <img src="images/logo-firefox.svg" alt="Firefox logo">
+          <img src="file:///C:/Users/DELL/bookmark-landing-page-master/images/logo-firefox.svg" alt="Firefox logo">
           <h3>Add to Firefox</h3>
           <p>Minimum version 55</p>
           <button>Add & Install Extension</button>
         </span>
         <span class="span6">
-          <img src="images/logo-opera.svg" alt="Opera logo">
+          <img src="file:///C:/Users/DELL/bookmark-landing-page-master/images/logo-opera.svg" alt="Opera logo">
           <h3>Add to Opera</h3>
           <p>Minimum version 46</p>
           <button>Add & Install Extension</button>
@@ -100,26 +110,26 @@
     <div class="div2">
       <span class="span1">
         <h4>What is Bookmark?</h4>
-        <img class="img" src="images/icon-arrow.svg" alt="icon-arrow">
-        <img class="img1 display1" src="images/icon-close.svg" alt="close-icon">
+        <img class="img" src="file:///C:/Users/DELL/bookmark-landing-page-master/images/icon-arrow.svg" alt="icon-arrow">
+        <img class="img1 display1" src="file:///C:/Users/DELL/bookmark-landing-page-master/images/icon-close.svg" alt="close-icon">
         <p class="par display1">A bookmark is a saved shortcut that directs your browser to a specific webpage. It stores the title, URL, and favicon of the corresponding page.</p>
       </span>
       <span class="span2">
         <h4>How can I request a new browser?</h4>
-        <img class="img" src="images/icon-arrow.svg" alt="icon-arrow">
-        <img class="img1 display1" src="images/icon-close.svg" alt="close-icon">
+        <img class="img" src="file:///C:/Users/DELL/bookmark-landing-page-master/images/icon-arrow.svg" alt="icon-arrow">
+        <img class="img1 display1" src="file:///C:/Users/DELL/bookmark-landing-page-master/images/icon-close.svg" alt="close-icon">
         <p class="par display1">Open the start menu and click "All Programs" to open the menu of programs installed on your computer. Newly installed software is usually highlighted in the Windows start menu. Select your new Internet browser to start the program. Set your new Internet browser as your default browser.</p>
       </span>
       <span class="span3">
         <h4>Is there a mobile app?</h4>
-        <img class="img" src="images/icon-arrow.svg" alt="icon-arrow">
-        <img class="img1 display1" src="images/icon-close.svg" alt="close-icon">
+        <img class="img" src="file:///C:/Users/DELL/bookmark-landing-page-master/images/icon-arrow.svg" alt="icon-arrow">
+        <img class="img1 display1" src="file:///C:/Users/DELL/bookmark-landing-page-master/images/icon-close.svg" alt="close-icon">
         <p class="par display1">Definitely there are moblie apps for any desktop web browser which include opera-mini, firefox, Chrome, pinterest, etc.</p>
       </span>
       <span class="span4">
         <h4>What about other Chromium browsers?</h4>
-        <img class="img" src="images/icon-arrow.svg" alt="icon-arrow">
-        <img class="img1 display1" src="images/icon-close.svg" alt="close-icon">
+        <img class="img" src="file:///C:/Users/DELL/bookmark-landing-page-master/images/icon-arrow.svg" alt="icon-arrow">
+        <img class="img1 display1" src="file:///C:/Users/DELL/bookmark-landing-page-master/images/icon-close.svg" alt="close-icon">
         <p class="par display1">Chromium browsers are very much available for for moblie usage, though they are basically for advanced users and web developers.</p>
       </span>
       <button class="button">More Info</button>
@@ -138,7 +148,7 @@
     <section>
       <div class="div1">
         <span class="spine">
-          <img src="images/logo-bookmark.svg" alt="bookmark logo">
+          <img src="file:///C:/Users/DELL/bookmark-landing-page-master/images/logo-bookmark.svg" alt="bookmark logo">
         </span>
         <span class="span2">
           <a href="#">Features</a>
@@ -147,11 +157,126 @@
         </span>
       </div>
       <div class="div2">
-        <img src="images/icon-facebook.svg" alt="facebook icon">
-         <img src="images/icon-twitter.svg" alt="twitter icon">
+        <img src="file:///C:/Users/DELL/bookmark-landing-page-master/images/icon-facebook.svg" alt="facebook icon">
+         <img src="file:///C:/Users/DELL/bookmark-landing-page-master/images/icon-twitter.svg" alt="twitter icon">
       </div>
     </section>  
   </footer>
+
+  <!-- Features
+  Pricing
+
+  Contact
+  Login
+
+  A Simple Bookmark Manager
+
+  A clean and simple interface to organize your favourite websites. Open a new 
+  browser tab and see your sites load instantly. Try it for free.
+
+  Get it on Chrome
+  Get it on Firefox
+
+  Features
+
+  Our aim is to make it quick and easy for you to access your favourite websites. 
+  Your bookmarks sync between your devices so you can access them on the go.
+
+  Simple Bookmarking
+  Speedy Searching
+  Easy Sharing
+
+  Bookmark in one click
+
+  Organize your bookmarks however you like. Our simple drag-and-drop interface 
+  gives you complete control over how you manage your favourite sites.
+
+  More Info
+
+  Intelligent search
+
+  Our powerful search feature will help you find saved sites in no time at all. 
+  No need to trawl through all of your bookmarks.
+
+  More Info
+
+  Share your bookmarks
+
+  Easily share your bookmarks and collections with others. Create a shareable 
+  link that you can send at the click of a button.
+
+  More Info
+
+  Download the extension
+
+  We’ve got more browsers in the pipeline. Please do let us know if you’ve 
+  got a favourite you’d like us to prioritize.
+
+  Add to Chrome
+  Minimum version 62
+  Add & Install Extension
+
+  Add to Firefox
+  Minimum version 55
+  Add & Install Extension
+
+  Add to Opera
+  Minimum version 46
+  Add & Install Extension
+
+  Frequently Asked Questions
+  
+  Here are some of our FAQs. If you have any other questions you’d like 
+  answered please feel free to email us.
+
+  <!-- Question 1 -->
+  <!-- What is Bookmark? -->
+
+  <!-- Answer 1 -->
+  <!-- Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce tincidunt 
+  justo eget ultricies fringilla. Phasellus blandit ipsum quis quam ornare mattis.
+
+  <!-- Question 2 -->
+  <!-- How can I request a new browser? -->
+
+  <!-- Answer 2 -->
+  <!-- Vivamus luctus eros aliquet convallis ultricies. Mauris augue massa, ultricies non ligula. 
+  Suspendisse imperdiet. Vivamus luctus eros aliquet convallis ultricies. Mauris augue massa, 
+  ultricies non ligula. Suspendisse imperdie tVivamus luctus eros aliquet convallis ultricies. 
+  Mauris augue massa, ultricies non ligula. Suspendisse imperdiet. -->
+
+  <!-- Question 3 -->
+  <!-- Is there a mobile app? -->
+
+  <!-- Answer 3 -->
+  <!-- Sed consectetur quam id neque fermentum accumsan. Praesent luctus vestibulum dolor, ut condimentum 
+  urna vulputate eget. Cras in ligula quis est pharetra mattis sit amet pharetra purus. Sed 
+  sollicitudin ex et ultricies bibendum. -->
+
+  <!-- Question 4 -->
+  <!-- What about other Chromium browsers? -->
+
+  <!-- Answer 4 -->
+  <!-- Integer condimentum ipsum id imperdiet finibus. Vivamus in placerat mi, at euismod dui. Aliquam 
+  vitae neque eget nisl gravida pellentesque non ut velit.
+
+  More Info
+
+  35,000+ already joined
+
+  Stay up-to-date with what we’re doing
+
+  Contact Us
+
+  Features
+  Pricing
+  Contact -->
+  <!-- <footer>
+    <p class="attribution">
+      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+      Coded by <a href="#">Your Name Here</a>.
+    </p>
+  </footer> -->
   <script src="app.js"></script>
 </body>
 </html>
