--- a/index.html
+++ b/index.html
@@ -57,12 +57,12 @@
     <p>Our aim is to make it quick and easy for you to access your <br> favourite websites. 
       Your bookmarks sync between your devices <br> so you can access them on the go.</p>
        <span>
-         <a href="#">Simple Bookmarking</a>
-         <a href="#">Speedy Searching</a>
-         <a href="#">Easy Sharing</a>
+         <a class="dropdownf" href="#">Simple Bookmarking</a>
+         <a class="dropdowns" href="#">Speedy Searching</a>
+         <a class="dropdownt" href="#">Easy Sharing</a>
        </span>
   </section>
-  <section class="section3">
+  <section class="section3 simple">
     <div class="firstDiv">
       <img src="file:///C:/Users/DELL/bookmark-landing-page-master/images/illustration-features-tab-1.svg" alt="Illustration-features">
       <div class="space"></div>
@@ -71,6 +71,30 @@
       <h2>Bookmark in one click</h2>
       <p>Organize your bookmarks however you like. Our <br> simple drag-and-drop interface 
         gives you complete <br> control over how you manage your favourite sites.</p>
+        <button>More Info</button>
+    </div>
+  </section>
+  <section class="section3 speedy">
+    <div class="firstDiv">
+      <img src="file:///C:/Users/DELL/bookmark-landing-page-master/bookmark.github.io/images/illustration-features-tab-2.svg" alt="Illustration-features">
+      <div class="space"></div>
+    </div>
+    <div class="secondDiv">
+      <h2>Intelligent search</h2>
+      <p>Our powerful search feature will <br> help you find saved sites in no time at all. 
+        No need to <br> trawl through all of your bookmarks.</p>
+        <button>More Info</button>
+    </div>
+  </section>
+  <section class="section3 easy">
+    <div class="firstDiv">
+      <img src="file:///C:/Users/DELL/bookmark-landing-page-master/bookmark.github.io/images/illustration-features-tab-3.svg" alt="Illustration-features">
+      <div class="space"></div>
+    </div>
+    <div class="secondDiv">
+      <h2>Share your bookmarks</h2>
+      <p> Easily share your bookmarks and <br> collections with others. Create a shareable 
+        link that you <br> can send at the click of a button.</p>
         <button>More Info</button>
     </div>
   </section>
@@ -162,121 +186,6 @@
       </div>
     </section>  
   </footer>
-
-  <!-- Features
-  Pricing
-
-  Contact
-  Login
-
-  A Simple Bookmark Manager
-
-  A clean and simple interface to organize your favourite websites. Open a new 
-  browser tab and see your sites load instantly. Try it for free.
-
-  Get it on Chrome
-  Get it on Firefox
-
-  Features
-
-  Our aim is to make it quick and easy for you to access your favourite websites. 
-  Your bookmarks sync between your devices so you can access them on the go.
-
-  Simple Bookmarking
-  Speedy Searching
-  Easy Sharing
-
-  Bookmark in one click
-
-  Organize your bookmarks however you like. Our simple drag-and-drop interface 
-  gives you complete control over how you manage your favourite sites.
-
-  More Info
-
-  Intelligent search
-
-  Our powerful search feature will help you find saved sites in no time at all. 
-  No need to trawl through all of your bookmarks.
-
-  More Info
-
-  Share your bookmarks
-
-  Easily share your bookmarks and collections with others. Create a shareable 
-  link that you can send at the click of a button.
-
-  More Info
-
-  Download the extension
-
-  We’ve got more browsers in the pipeline. Please do let us know if you’ve 
-  got a favourite you’d like us to prioritize.
-
-  Add to Chrome
-  Minimum version 62
-  Add & Install Extension
-
-  Add to Firefox
-  Minimum version 55
-  Add & Install Extension
-
-  Add to Opera
-  Minimum version 46
-  Add & Install Extension
-
-  Frequently Asked Questions
-  
-  Here are some of our FAQs. If you have any other questions you’d like 
-  answered please feel free to email us.
-
-  <!-- Question 1 -->
-  <!-- What is Bookmark? -->
-
-  <!-- Answer 1 -->
-  <!-- Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce tincidunt 
-  justo eget ultricies fringilla. Phasellus blandit ipsum quis quam ornare mattis.
-
-  <!-- Question 2 -->
-  <!-- How can I request a new browser? -->
-
-  <!-- Answer 2 -->
-  <!-- Vivamus luctus eros aliquet convallis ultricies. Mauris augue massa, ultricies non ligula. 
-  Suspendisse imperdiet. Vivamus luctus eros aliquet convallis ultricies. Mauris augue massa, 
-  ultricies non ligula. Suspendisse imperdie tVivamus luctus eros aliquet convallis ultricies. 
-  Mauris augue massa, ultricies non ligula. Suspendisse imperdiet. -->
-
-  <!-- Question 3 -->
-  <!-- Is there a mobile app? -->
-
-  <!-- Answer 3 -->
-  <!-- Sed consectetur quam id neque fermentum accumsan. Praesent luctus vestibulum dolor, ut condimentum 
-  urna vulputate eget. Cras in ligula quis est pharetra mattis sit amet pharetra purus. Sed 
-  sollicitudin ex et ultricies bibendum. -->
-
-  <!-- Question 4 -->
-  <!-- What about other Chromium browsers? -->
-
-  <!-- Answer 4 -->
-  <!-- Integer condimentum ipsum id imperdiet finibus. Vivamus in placerat mi, at euismod dui. Aliquam 
-  vitae neque eget nisl gravida pellentesque non ut velit.
-
-  More Info
-
-  35,000+ already joined
-
-  Stay up-to-date with what we’re doing
-
-  Contact Us
-
-  Features
-  Pricing
-  Contact -->
-  <!-- <footer>
-    <p class="attribution">
-      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">Your Name Here</a>.
-    </p>
-  </footer> -->
   <script src="app.js"></script>
 </body>
 </html>
