updated the html file

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
   <nav>
-    <header><img src="C:\Users\DELL\bookmark-landing-page-master\images\logo-bookmark.svg" alt="Bookmark-logo"></header>
+    <header><img src="images\logo-bookmark.svg" alt="Bookmark-logo"></header>
     <div class="nav-items">
       <a href="#">Features</a>
       <a href="#">Pricing</a>
@@ -26,13 +26,13 @@
       <a href="#">Contact</a>
       <a href="#">Login</a>
       <div class="dav">
-        <a href="#"><img src="file:///C:/Users/DELL/bookmark-landing-page-master/images/icon-facebook.svg" alt="facebook icon"></a>
-        <a href="#"> <img src="file:///C:/Users/DELL/bookmark-landing-page-master/images/icon-twitter.svg" alt="twitter icon"></a>
+        <a href="#"><img src="images/icon-facebook.svg" alt="facebook icon"></a>
+        <a href="#"> <img src="images/icon-twitter.svg" alt="twitter icon"></a>
       </div>
     </div>
     <div class="nav-toggle display">
-      <img class="image1" src="file:///C:/Users/DELL/bookmark-landing-page-master/images/icon-hamburger.svg" alt="harmburger-icon">
-      <img class="image2 display1" src="file:///C:/Users/DELL/bookmark-landing-page-master/images/icon-close.svg" alt="close-icon">
+      <img class="image1" src="images/icon-hamburger.svg" alt="harmburger-icon">
+      <img class="image2 display1" src="images/icon-close.svg" alt="close-icon">
     </div>
   </nav>
   <section class="section1">
@@ -48,7 +48,7 @@
         </span>
     </div>
     <div class="secondSecItem">
-      <img src="file:///C:/Users/DELL/bookmark-landing-page-master/images/illustration-hero.svg" alt="Illustration-features">
+      <img src="images/illustration-hero.svg" alt="Illustration-features">
       <div class="space"></div>
     </div>
   </section>
@@ -64,7 +64,7 @@
   </section>
   <section class="section3 simple">
     <div class="firstDiv">
-      <img src="file:///C:/Users/DELL/bookmark-landing-page-master/images/illustration-features-tab-1.svg" alt="Illustration-features">
+      <img src="images/illustration-features-tab-1.svg" alt="Illustration-features">
       <div class="space"></div>
     </div>
     <div class="secondDiv">
@@ -76,7 +76,7 @@
   </section>
   <section class="section3 speedy">
     <div class="firstDiv">
-      <img src="file:///C:/Users/DELL/bookmark-landing-page-master/bookmark.github.io/images/illustration-features-tab-2.svg" alt="Illustration-features">
+      <img src="images/illustration-features-tab-2.svg" alt="Illustration-features">
       <div class="space"></div>
     </div>
     <div class="secondDiv">
@@ -88,7 +88,7 @@
   </section>
   <section class="section3 easy">
     <div class="firstDiv">
-      <img src="file:///C:/Users/DELL/bookmark-landing-page-master/bookmark.github.io/images/illustration-features-tab-3.svg" alt="Illustration-features">
+      <img src="images/illustration-features-tab-3.svg" alt="Illustration-features">
       <div class="space"></div>
     </div>
     <div class="secondDiv">
@@ -106,19 +106,19 @@
     </div>
       <div class="div4">
         <span class="span4">
-          <img src="file:///C:/Users/DELL/bookmark-landing-page-master/images/logo-chrome.svg" alt="Chrome logo">
+          <img src="images/logo-chrome.svg" alt="Chrome logo">
           <h3>Add to Chrome</h3>
           <p>Minimum version 62</p>
           <button>Add & Install Extension</button>
         </span>
         <span class="span5">
-          <img src="file:///C:/Users/DELL/bookmark-landing-page-master/images/logo-firefox.svg" alt="Firefox logo">
+          <img src="images/logo-firefox.svg" alt="Firefox logo">
           <h3>Add to Firefox</h3>
           <p>Minimum version 55</p>
           <button>Add & Install Extension</button>
         </span>
         <span class="span6">
-          <img src="file:///C:/Users/DELL/bookmark-landing-page-master/images/logo-opera.svg" alt="Opera logo">
+          <img src="images/logo-opera.svg" alt="Opera logo">
           <h3>Add to Opera</h3>
           <p>Minimum version 46</p>
           <button>Add & Install Extension</button>
@@ -134,26 +134,26 @@
     <div class="div2">
       <span class="span1">
         <h4>What is Bookmark?</h4>
-        <img class="img" src="file:///C:/Users/DELL/bookmark-landing-page-master/images/icon-arrow.svg" alt="icon-arrow">
-        <img class="img1 display1" src="file:///C:/Users/DELL/bookmark-landing-page-master/images/icon-close.svg" alt="close-icon">
+        <img class="img" src="images/icon-arrow.svg" alt="icon-arrow">
+        <img class="img1 display1" src="images/icon-close.svg" alt="close-icon">
         <p class="par display1">A bookmark is a saved shortcut that directs your browser to a specific webpage. It stores the title, URL, and favicon of the corresponding page.</p>
       </span>
       <span class="span2">
         <h4>How can I request a new browser?</h4>
-        <img class="img" src="file:///C:/Users/DELL/bookmark-landing-page-master/images/icon-arrow.svg" alt="icon-arrow">
-        <img class="img1 display1" src="file:///C:/Users/DELL/bookmark-landing-page-master/images/icon-close.svg" alt="close-icon">
+        <img class="img" src="images/icon-arrow.svg" alt="icon-arrow">
+        <img class="img1 display1" src="images/icon-close.svg" alt="close-icon">
         <p class="par display1">Open the start menu and click "All Programs" to open the menu of programs installed on your computer. Newly installed software is usually highlighted in the Windows start menu. Select your new Internet browser to start the program. Set your new Internet browser as your default browser.</p>
       </span>
       <span class="span3">
         <h4>Is there a mobile app?</h4>
-        <img class="img" src="file:///C:/Users/DELL/bookmark-landing-page-master/images/icon-arrow.svg" alt="icon-arrow">
-        <img class="img1 display1" src="file:///C:/Users/DELL/bookmark-landing-page-master/images/icon-close.svg" alt="close-icon">
+        <img class="img" src="images/icon-arrow.svg" alt="icon-arrow">
+        <img class="img1 display1" src="images/icon-close.svg" alt="close-icon">
         <p class="par display1">Definitely there are moblie apps for any desktop web browser which include opera-mini, firefox, Chrome, pinterest, etc.</p>
       </span>
       <span class="span4">
         <h4>What about other Chromium browsers?</h4>
-        <img class="img" src="file:///C:/Users/DELL/bookmark-landing-page-master/images/icon-arrow.svg" alt="icon-arrow">
-        <img class="img1 display1" src="file:///C:/Users/DELL/bookmark-landing-page-master/images/icon-close.svg" alt="close-icon">
+        <img class="img" src="images/icon-arrow.svg" alt="icon-arrow">
+        <img class="img1 display1" src="images/icon-close.svg" alt="close-icon">
         <p class="par display1">Chromium browsers are very much available for for moblie usage, though they are basically for advanced users and web developers.</p>
       </span>
       <button class="button">More Info</button>
@@ -172,7 +172,7 @@
     <section>
       <div class="div1">
         <span class="spine">
-          <img src="file:///C:/Users/DELL/bookmark-landing-page-master/images/logo-bookmark.svg" alt="bookmark logo">
+          <img src="images/logo-bookmark.svg" alt="bookmark logo">
         </span>
         <span class="span2">
           <a href="#">Features</a>
@@ -181,8 +181,8 @@
         </span>
       </div>
       <div class="div2">
-        <img src="file:///C:/Users/DELL/bookmark-landing-page-master/images/icon-facebook.svg" alt="facebook icon">
-         <img src="file:///C:/Users/DELL/bookmark-landing-page-master/images/icon-twitter.svg" alt="twitter icon">
+        <img src="images/icon-facebook.svg" alt="facebook icon">
+         <img src="images/icon-twitter.svg" alt="twitter icon">
       </div>
     </section>  
   </footer>
