updated the html file

--- a/index.html
+++ b/index.html
@@ -15,19 +15,19 @@
   <nav>
     <header><img src="images\logo-bookmark.svg" alt="Bookmark-logo"></header>
     <div class="nav-items">
-      <a href="http://">Features</a>
-      <a href="http://">Pricing</a>
-      <a href="http://">Contact</a>
-      <a href="http://">Login</a>
+      <a href="#">Features</a>
+      <a href="#">Pricing</a>
+      <a href="#">Contact</a>
+      <a href="#">Login</a>
     </div>
     <div class="nav-links display1">
-      <a href="http://">Features</a>
-      <a href="http://">Pricing</a>
-      <a href="http://">Contact</a>
-      <a href="http://">Login</a>
+      <a href="#">Features</a>
+      <a href="#">Pricing</a>
+      <a href="#">Contact</a>
+      <a href="#">Login</a>
       <div class="dav">
-        <a href="http://"><img src="images/icon-facebook.svg" alt="facebook icon"></a>
-        <a href="http://"> <img src="images/icon-twitter.svg" alt="twitter icon"></a>
+        <a href="#"><img src="images/icon-facebook.svg" alt="facebook icon"></a>
+        <a href="#"> <img src="images/icon-twitter.svg" alt="twitter icon"></a>
       </div>
     </div>
     <div class="nav-toggle display">
@@ -57,9 +57,9 @@
     <p>Our aim is to make it quick and easy for you to access your <br> favourite websites. 
       Your bookmarks sync between your devices <br> so you can access them on the go.</p>
        <span>
-         <a class="dropdownf" href="http://">Simple Bookmarking</a>
-         <a class="dropdowns" href="http://">Speedy Searching</a>
-         <a class="dropdownt" href="http://">Easy Sharing</a>
+         <a class="dropdownf" href="#">Simple Bookmarking</a>
+         <a class="dropdowns" href="#">Speedy Searching</a>
+         <a class="dropdownt" href="#">Easy Sharing</a>
        </span>
   </section>
   <section class="section3 simple">
@@ -163,7 +163,7 @@
     <div class="div">
       <h5>35,000+ already joined</h5>
       <h2>Stay up-to-date with what <br> we’re doing</h2>
-      <form action="http://">
+      <form action="#">
         <input id="input" type="text" placeholder="Enter your Email address">
         <br class="none">
         <button>Contact Us</button>
@@ -175,9 +175,9 @@
           <img src="images/logo-bookmark.svg" alt="bookmark logo">
         </span>
         <span class="span2">
-          <a href="http://">Features</a>
-          <a href="http://">Pricing</a>
-          <a href="http://">Contact</a>
+          <a href="#">Features</a>
+          <a href="#">Pricing</a>
+          <a href="#">Contact</a>
         </span>
       </div>
       <div class="div2">
