updated the html file

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
   <nav>
-    <header><img src="images\logo-bookmark.svg" alt="Bookmark-logo"></header>
+    <header><img src="images/logo-bookmark%20copy.svg" alt="Bookmark-logo"></header>
     <div class="nav-items">
       <a href="#">Features</a>
       <a href="#">Pricing</a>
