updated css and html file

--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
       <a href="#">Contact</a>
       <a href="#">Login</a>
       <div class="dav">
-        <a href="#"><img src="images/icon-facebook.svg" alt="facebook icon"></a>
-        <a href="#"> <img src="images/icon-twitter.svg" alt="twitter icon"></a>
+        <a href="https://web.facebook.com/Abelkelz"><img src="images/icon-facebook.svg" alt="facebook icon"></a>
+        <a href="https://twitter.com/Xtreme_ng"> <img src="images/icon-twitter.svg" alt="twitter icon"></a>
       </div>
     </div>
     <div class="nav-toggle display">
@@ -182,8 +182,8 @@
         </span>
       </div>
       <div class="div2">
-        <img src="images/icon-facebook.svg" alt="facebook icon">
-         <img src="images/icon-twitter.svg" alt="twitter icon">
+         <a href="https://web.facebook.com/Abelkelz"><img src="images/icon-facebook.svg" alt="facebook icon"></a>
+         <a href="https://twitter.com/Xtreme_ng"><img src="images/icon-twitter.svg" alt="twitter icon"></a>
       </div>
     </section>  
   </footer>
