html and css update

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
   <nav>
     <header class="head"><img src="images/logo-bookmark%20copy.svg" alt="Bookmark-logo"></header>
-    <header class="head1 display1"><img src="images\logo-bookmark.svg" alt="Bookmark-logo"></header>
+    <header class="head1 display1"><img src="images/logo-bookmark.svg" alt="Bookmark-logo"></header>
     <div class="nav-items">
       <a href="#">Features</a>
       <a href="#">Pricing</a>
@@ -38,11 +38,11 @@
   </nav>
   <section class="section1">
     <div class="firstSecItem">
-      <span class="span">
+      <div class="span">
         <h1>A Simple Bookmark <br> Manager</h1>
         <p>A clean and simple interface to organize your favourite <br> websites. Open a new 
         browser tab and see your sites load <br> instantly. Try it for free.</p>
-      </span>
+      </div>
         <span class="span1">
           <button class="btn">Get it on Chrome</button>
           <button class="btn1">Get it on Firefox</button>
@@ -106,24 +106,24 @@
         got a favourite you’d like us to prioritize.</p>
     </div>
       <div class="div4">
-        <span class="span4">
+        <div class="span4">
           <img src="images/logo-chrome.svg" alt="Chrome logo">
           <h3>Add to Chrome</h3>
           <p>Minimum version 62</p>
           <button>Add & Install Extension</button>
-        </span>
-        <span class="span5">
+        </div>
+        <div class="span5">
           <img src="images/logo-firefox.svg" alt="Firefox logo">
           <h3>Add to Firefox</h3>
           <p>Minimum version 55</p>
           <button>Add & Install Extension</button>
-        </span>
-        <span class="span6">
+        </div>
+        <div class="span6">
           <img src="images/logo-opera.svg" alt="Opera logo">
           <h3>Add to Opera</h3>
           <p>Minimum version 46</p>
           <button>Add & Install Extension</button>
-        </span>
+        </div>
       </div>
   </section>
   <section class="section5">
@@ -133,30 +133,30 @@
         answered please feel free to email us.</p>
     </div>
     <div class="div2">
-      <span class="span1">
+      <div class="span1">
         <h4>What is Bookmark?</h4>
         <img class="img" src="images/icon-arrow.svg" alt="icon-arrow">
         <img class="img1 display1" src="images/icon-close.svg" alt="close-icon">
         <p class="par display1">A bookmark is a saved shortcut that directs your browser to a specific webpage. It stores the title, URL, and favicon of the corresponding page.</p>
-      </span>
-      <span class="span2">
+      </div>
+      <div class="span2">
         <h4>How can I request a new browser?</h4>
         <img class="img" src="images/icon-arrow.svg" alt="icon-arrow">
         <img class="img1 display1" src="images/icon-close.svg" alt="close-icon">
         <p class="par display1">Open the start menu and click "All Programs" to open the menu of programs installed on your computer. Newly installed software is usually highlighted in the Windows start menu. Select your new Internet browser to start the program. Set your new Internet browser as your default browser.</p>
-      </span>
-      <span class="span3">
+      </div>
+      <div class="span3">
         <h4>Is there a mobile app?</h4>
         <img class="img" src="images/icon-arrow.svg" alt="icon-arrow">
         <img class="img1 display1" src="images/icon-close.svg" alt="close-icon">
         <p class="par display1">Definitely there are moblie apps for any desktop web browser which include opera-mini, firefox, Chrome, pinterest, etc.</p>
-      </span>
-      <span class="span4">
+      </div>
+      <div class="span4">
         <h4>What about other Chromium browsers?</h4>
         <img class="img" src="images/icon-arrow.svg" alt="icon-arrow">
         <img class="img1 display1" src="images/icon-close.svg" alt="close-icon">
         <p class="par display1">Chromium browsers are very much available for for moblie usage, though they are basically for advanced users and web developers.</p>
-      </span>
+      </div>
       <button class="button">More Info</button>
     </div>
   </section>
@@ -165,9 +165,9 @@
       <h5>35,000+ already joined</h5>
       <h2>Stay up-to-date with what <br> we’re doing</h2>
       <form action="#">
-        <input id="input" type="text" placeholder="Enter your Email address">
+        <input id="Email" type="text" name="Email" placeholder="Enter your Email address">
         <br class="none">
-        <button>Contact Us</button>
+        <label for="Email">Contact Us</label>
       </form>
     </div>
     <section>
